# Note

QScript/: .gitignore  CMakeLists.txt  README.md  build.sh  env.md
QScript/examples/: README.md  simple_run.lua  temperature_sweep.lua  test_api.lua
QScript/src/: cfd_solver.cpp  cfd_solver.h  cfd_solver_thread.cpp  cfd_solver_thread.h  computation_controller.cpp  computation_controller.h  computation_progress.h  computation_state.h  error_info.h  main.cpp  main_window.cpp  main_window.h  monitor_widget.cpp  monitor_widget.h  script_editor_widget.cpp  script_editor_widget.h  script_engine.cpp  script_engine.h  solver_configuration.h
QScript/tests/: CMakeLists.txt  test_main.cpp
QScript/tests/property/: test_properties_solver.cpp
QScript/tests/unit/: test_cfd_solver.cpp  test_cfd_solver_thread.cpp  test_computation_controller.cpp  test_main_window.cpp  test_monitor_widget.cpp
cipherBahavior/: STEP-1-Config.yaml  STEP-2-Convert.yaml  STEP-3-Setup.yaml  cipherBahavior.md
temp/: GUI128.7z  ParaView_Architecture_Guide.md  ParaviewBUILD_GUIDE.md  Post127.7z  Post模块改进方案.md  Post模块架构分析.md  analyze.md  report1_27.md  temp.md  大数据处理性能分析与改进.md
temp/1223/: report310.md
vs/: CMakeLists.txt  CMakeSettings.json  launch.vs.json
vs/Others/: README.md  deploy_windows.ps1  test_minimal.cpp  test_qt.cpp  部署说明.md
vs/lib/: CMakeLists.txt  post_base_export.h
vs/lib/Utilities/: ErrorUtils.cpp  ErrorUtils.h  FileUtils.cpp  FileUtils.h  PrintUtils.cpp  PrintUtils.h  StringUtils.cpp  StringUtils.h
vs/lib/Utilities/Containers/: ndarray.h
vs/lib/Utilities/H5/: H5.h  H5Attribute.cpp  H5Attribute.h  H5Dataset.cpp  H5Dataset.h  H5Dataspace.cpp  H5Dataspace.h  H5Datatype.cpp  H5Datatype.h  H5File.cpp  H5File.h  H5Group.cpp  H5Group.h  H5ObjectBase.cpp  H5ObjectBase.h  H5PropertyList.cpp  H5PropertyList.h
vs/resources/: resources.qrc
vs/src/: CMakeLists.txt  CalculatorDialog.cpp  CalculatorDialog.h  CalculatorDialog.ui  ColorBarDialog.cpp  ColorBarDialog.h  ColorBarDialog.ui  ColorMapPreset.cpp  ColorMapPreset.h  ConstHeightPlaneDialog.cpp  ConstHeightPlaneDialog.h  ConstHeightPlaneDialog.ui  ConstSettingDialog.cpp  ConstSettingDialog.h  ConstSettingDialog.ui  ControlPanel.cpp  ControlPanel.h  ControlPanel.ui  CutplaneDialog.cpp  CutplaneDialog.h  CutplaneDialog.ui  IsoSurfaceDialog.cpp  IsoSurfaceDialog.h  IsoSurfaceDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MeridionalPlaneDialog.cpp  MeridionalPlaneDialog.h  MeridionalPlaneDialog.ui  ProbePanel.cpp  ProbePanel.h  ProbePanel.ui  PropertyPanel.cpp  PropertyPanel.h  ScaleFactorDialog.cpp  ScaleFactorDialog.h  ScaleFactorDialog.ui  SelectBoundaryDialog.cpp  SelectBoundaryDialog.h  (+10 more)
vs/test_build/: CMakeCache.txt
vs/zjui-post-deploy/: README.txt
